# virturust

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  FEATURES.md  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  ideas.md
examples/: nginx-php.toml  postgres.toml  simple-alpine.toml
examples/compose/: corten-compose.yml
examples/forge/: Cortenforge.jsonc  Cortenforge.toml
examples/hello-world/: Corten.jsonc  Corten.toml
examples/mysql/: Corten.jsonc  Corten.toml
examples/nginx/: Corten.jsonc  Corten.toml  nginx.conf
examples/php-nginx/: Cortenforge.jsonc  Cortenforge.toml
examples/python-app/: Corten.jsonc  Corten.toml  app.py
examples/redis/: Corten.jsonc  Corten.toml
scripts/: benchmark.sh  concurrent-benchmark.sh  mysql-benchmark.sh  nginx-benchmark.sh  nodejs-benchmark.sh  php-benchmark.sh  postgres-benchmark.sh  realapp-benchmark.sh  redis-benchmark.sh  run-all-benchmarks.sh  smoke-test.sh  startup-benchmark.sh  stress-250.sh  throughput-benchmark.sh  vps-test.sh
src/: build.rs  cgroup.rs  cli.rs  compose.rs  config.rs  container.rs  filesystem.rs  image.rs  lib.rs  main.rs  namespace.rs  network.rs  security.rs
tests/: build_cli_test.rs  build_test.rs  cgroup_tests.rs  cli_new_flags_test.rs  cli_tests.rs  compose_test.rs  config_tests.rs  container_tests.rs  image_config_test.rs  image_tests.rs  isolation_test.rs  network_cli_test.rs  network_parse_test.rs  port_parse_test.rs  restart_policy_test.rs  rootless_test.rs  security_test.rs  volume_parse_test.rs
tests/e2e/: lifecycle_test.rs  mod.rs  network_test.rs  user_isolation_test.rs
(+10 files in other folders)
