[package]
name = "corten"
version = "0.1.0"
edition = "2024"
description = "A lightweight, high-performance container runtime written in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["container", "runtime", "virtualization", "linux", "cgroups"]
categories = ["os", "command-line-utilities"]

[[bin]]
name = "corten"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
flate2 = "1"
libc = "0.2"
log = "0.4"
nix = { version = "0.29", features = ["sched", "mount", "fs", "hostname", "signal", "user", "process", "net"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[test]]
name = "compose_test"
path = "tests/compose_test.rs"

[[test]]
name = "filesystem_test"
path = "tests/integration/filesystem_test.rs"

[[test]]
name = "overlay_test"
path = "tests/integration/overlay_test.rs"

[[test]]
name = "volume_test"
path = "tests/integration/volume_test.rs"

[[test]]
name = "whiteout_test"
path = "tests/integration/whiteout_test.rs"

[[test]]
name = "network_test"
path = "tests/e2e/network_test.rs"

[[test]]
name = "lifecycle_test"
path = "tests/e2e/lifecycle_test.rs"

[[test]]
name = "isolation_test"
path = "tests/isolation_test.rs"
